--- a/webminds/public/cada.css
+++ b/webminds/public/cada.css
@@ -4,9 +4,13 @@
     box-sizing: border-box;
 }
 
+ {
+
+}
+
 body {
     font-family: Arial, sans-serif;
-    background-image: url(image.png);
+    background-color: #6A5ACD;
     display: flex;
     justify-content: center;
     align-items: flex-start;
@@ -16,18 +20,18 @@ body {
 
 .container {
     width: 100%;
-    max-width: 800px;
+    max-width: 600px;
     background-color: #fff;
-    padding: 20px;
+    padding: 70px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 h1 {
     font-family: Comic Sans MS, cursive, sans-serif; 
-    text-align: left;
-    margin-bottom: 20px;
-    color:#402188
+    text-align: center;
+    margin-bottom: 30px;
+    color: #402188;
 
 }
 
