--- a/webminds/public/style.css
+++ b/webminds/public/style.css
@@ -4,6 +4,32 @@
     box-sizing: border-box;
 }
 
+
+nav {
+    background-color: #333;
+}
+
+.menu {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+}
+
+.menu li {
+    flex: 1;
+}
+
+.menu a {
+    display: block;
+    padding: 14px 20px;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+}
+
+
+
 body {
     font-family: Arial, sans-serif;
     background-image: url(image.png);
