--- a/public/login.css
+++ b/public/login.css
@@ -7,6 +7,7 @@
 body {
     font-family: Arial, sans-serif;
     background-image: url(image.png);
+    background-size: cover;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -40,7 +41,10 @@ nav {
     display: block;
     padding: 10px 0;
     color: white;
+    font-size: 28px;
     text-decoration: none;
+    font-weight: 100;
+    font-family: system-ui;
 }
 
 .menu a:hover {
